--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
+        <!--添加JDBC依赖-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-jdbc</artifactId>-->
+        <!--</dependency>-->
+
 
         <!--&lt;!&ndash;日志依赖&ndash;&gt;-->
         <!--<dependency>-->
@@ -70,6 +76,11 @@
         <!--</dependency>-->
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
@@ -89,12 +100,17 @@
             <artifactId>easyexcel</artifactId>
             <version>1.1.2-beta5</version>
         </dependency>
-
-        <!--sqlite 驱动-->
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
+            <artifactId>fastjson</artifactId>
+            <groupId>com.alibaba</groupId>
+            <version>1.2.69</version>
         </dependency>
+
+        <!--&lt;!&ndash;sqlite 驱动&ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.xerial</groupId>-->
+            <!--<artifactId>sqlite-jdbc</artifactId>-->
+        <!--</dependency>-->
         <!-- druid 驱动 -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -122,7 +138,45 @@
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <groupId>tk.mybatis</groupId>
+            <version>2.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba</groupId>-->
+            <!--<artifactId>druid-spring-boot-starter</artifactId>-->
+            <!--<version>1.1.9</version>-->
+        <!--</dependency>-->
 
     </dependencies>
+
+    <!--<build>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<artifactId>mybatis-generator-maven-plugin</artifactId>-->
+                <!--<groupId>org.mybatis.generator</groupId>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
+    <!--</build>-->
 
 </project>
