--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,19 +2,34 @@ spring:
   application:
     name: test
   datasource:
-    url: jdbc:sqlite::resource:test.db
-    username:
-    password:
-    driver-class-name: org.xerial.sqlite-jdbc
-    tomcat:
-          max-active: 200
-          max-idle: 100
-          max-wait: 10000
-          min-idle: 5
-          initial-size: 5
-          validation-query: SELECT 1
-          test-on-borrow: false
-          test-while-idle: true
-          time-between-eviction-runs-millis: 30000
-          min-evictable-idle-time-millis: 60000
-          jdbc-interceptors: ConnectionState;
+    url: jdbc:mysql://d.db.daheng.co:3306/dh_zs_ipr?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+    username: root
+    password: SZ2019@dh-data.com
+    type: com.zaxxer.hikari.HikariDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+#  spring:
+#    jpa:
+#      show-sql: false
+#      hibernate:
+#        ddl-auto: none
+#      properties:
+#        hibernate.show_sql: false
+#        hibernate.format_sql: false
+#      open-in-view: false
+
+mybatis:
+  type-aliases-package: cn.xiaoyanol.crawler.mapper
+  mapperLocations: classpath:mappers/*Mapper.xml
+
+#    tomcat:
+#          max-active: 200
+#          max-idle: 100
+#          max-wait: 10000
+#          min-idle: 5
+#          initial-size: 5
+#          validation-query: SELECT 1
+#          test-on-borrow: false
+#          test-while-idle: true
+#          time-between-eviction-runs-millis: 30000
+#          min-evictable-idle-time-millis: 60000
+#          jdbc-interceptors: ConnectionState;
